--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.afterdark-1.0.10.jar=C:\\Users\\linusgoransson\\Desktop\\afterdark-1.0.10.jar
+file.reference.bootstrap-1.0.10.jar=C:\\Users\\linusgoransson\\Desktop\\bootstrap-1.0.10.jar
+file.reference.rocket-1.0.10.jar=C:\\Users\\linusgoransson\\Desktop\\rocket-1.0.10.jar
+file.reference.vader-1.0.10.jar=C:\\Users\\linusgoransson\\Desktop\\vader-1.0.10.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,7 +48,11 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.primefaces.classpath}
+    ${libs.primefaces.classpath}:\
+    ${file.reference.vader-1.0.10.jar}:\
+    ${file.reference.afterdark-1.0.10.jar}:\
+    ${file.reference.bootstrap-1.0.10.jar}:\
+    ${file.reference.rocket-1.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
